--- a/index.html
+++ b/index.html
@@ -128,12 +128,68 @@ body {
 }
 .column p {
     font-size: 15px;
+    opacity: 0.5;
+
 }
 a.link {
     text-decoration: none;
     float: right;
     font-size: 14px;
 }
+
+.col{
+  float: left;
+}
+
+.col.one p {
+    width: 677px;
+   font-size: 14px;
+   opacity: 0.5;
+
+}
+.col.one h4 {
+  opacity: 0.5;
+}
+.col.two {
+    padding-left: 35px;
+}
+.col.two p {
+   width: 250px;
+  opacity: 0.5;
+  padding-left: 8px;
+}
+.col.two h4 {
+  opacity: 0.5;
+  padding-left: 8px;
+  
+}
+.outerfooter {
+    background: darkslategrey;
+    margin-top: 41px;
+    height: 49px;
+}
+.footer {
+    padding: 20px 0;
+    display: block;
+    width: 960px;
+    margin: 0 auto; 
+    color: #919191;
+}
+
+.rowtwo {
+    padding-bottom: 314px;
+}
+
+p.lineleft.f {
+    float: left;
+    margin-top: -5px;
+}
+p.lineright.f {
+    float: right;
+    margin-top: -5px;
+}
+
+
 </style>
 </head>
 <body>
@@ -205,6 +261,32 @@ a.link {
             <a href="" class="link">Read More >></a>
         </div>
       </div>
+      <div class="rowtwo">
+
+        <div class="col one">
+            <h4>LORUM IPSUM DOLOR</h4>
+            <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence.</p>
+            <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
+            <a href="" class="link">Read More >></a>
+        </div>
+        <div class="col two">
+          <h4>LORUM IPSUM DOLOR</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.            .</p>
+          <a href="" class="link">Read More >></a>
+      </div>
+
+      </div>
+</div>
+<br>
+<div class="outerfooter">
+
+
+<div class="footer">
+  <p class="lineleft f">Copyright © 2018 - All Rights Reserved - Domain Name</p>
+
+  <p class="lineright f">Template by OS Templates</p>
+  
+</div>
 </div>
 
 </body>
